small changes to a few files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>this is a title</h1>
+    <p>This is a paragraph about how I love dogs and cats! they are so different but both are unique and fun!</p>
+    <ul>
+        <li>Playful</li>
+        <li>Do tricks</li>
+        <li>like a bes friend</li>
+        <li>Always happy to see you</li>
+        <li>Go for walks / runs</li>
+    </ul>
 </body>
 </html>
