a few changes in our index.html

--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
         <li>Always happy to see you</li>
         <li>Go for walks / runs</li>
     </ul>
+    <h2>Cats</h2>
+    <ul>
+        <li>Goo don their own</li>
+        <li>Lazy</li>
+        <li>Don't need attention all the time</li>
+    </ul>
 </body>
 </html>
