--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is a title</h1>
+    <h1>Cats vs. Dogs</h1>
+    <h4>Which is better for you?!</h4>
     <p>This is a paragraph about how I love dogs and cats! they are so different but both are unique and fun!</p>
+    <h2>Dogs</h2>
     <ul>
         <li>Playful</li>
         <li>Do tricks</li>
