--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>main page</title>
+    <title>This is what I'm talking about</title>
 </head>
 <body>
     <h2>This is the main page</h2>
