adding a list of dog pros

--- a/main.html
+++ b/main.html
@@ -8,5 +8,11 @@
 <body>
     <h2>This is the main page</h2>
     <p>this is a site about how awesome I am!!!</p>
+    <h3>Dogs:</h3>
+    <ul>
+        <li>Playful</li>
+        <li>Tricks</li>
+        <li>Train</li>
+    </ul>
 </body>
 </html>
