adding more dog pros to the list

--- a/main.html
+++ b/main.html
@@ -16,6 +16,8 @@
         <li>Playful</li>
         <li>Tricks</li>
         <li>Train</li>
+        <li>Happy</li>
+        <li>Man's Best Friend</li>
     </ul>
 </body>
 </html>
