adding cat pros to the cat list

--- a/main.html
+++ b/main.html
@@ -19,5 +19,12 @@
         <li>Happy</li>
         <li>Man's Best Friend</li>
     </ul>
+
+    <h3>Cats:</h3>
+    <ul>
+        <li>Lazy</li>
+        <li>Sleepy</li>
+        <li>Independent</li>
+    </ul>
 </body>
 </html>
