--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 <body>
 
 <body>
-    <h2>This is the main page</h2>
+    <h2>Cats Vs. Dogs</h2>
 
     <p>This is a site about cats and dogs!</p>
     <h3>Dogs:</h3>
