--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 <body>
 
 <body>
-    <h2>Cats Vs. Dogs!!</h2>
+    <h2>Cats Vs. Dogs!! Which do yu think are better?</h2>
     <h3>Dogs:</h3>
     <ul>
         <li>Playful</li>
