creation of cat page

--- a/main.html
+++ b/main.html
@@ -24,5 +24,15 @@
         <li>Sleepy</li>
         <li>Independent</li>
     </ul>
+
+    <div>
+        99% of Developers prefer cats
+    </div>
+
+    <div>
+        1% of Developers prefer dogs
+    </div>
+
+    <div></div>
 </body>
 </html>
